# DipDiver

./: .env.m2.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  secret-scan.yml
deploy/: Caddyfile  Dockerfile  README.md  docker-compose.yml
dipdiver/: __init__.py  _paths.py
dipdiver/adapters/: __init__.py
dipdiver/adapters/alpaca/: __init__.py  client.py  gate.py  portfolio.py  strategy.py
dipdiver/adapters/lean/: __init__.py  signals.py
dipdiver/brain/: __init__.py
dipdiver/brain/baselines/: __init__.py  __main__.py  config.py  data.py  results.py  runner.py  universes.py
dipdiver/brain/baselines/_qlib/: __init__.py  init.py  metrics.py  task.py
dipdiver/brain/baselines/configs/: crypto_lightgbm.yaml  crypto_lstm.yaml  dow30_lightgbm.yaml  dow30_lstm.yaml  nifty50_lightgbm.yaml  nifty50_lstm.yaml  sp500_lightgbm.yaml  sp500_lstm.yaml  world_indices_lightgbm.yaml  world_indices_lstm.yaml
dipdiver/brain/baselines/locked/: 56df28d4227e3262.json  612ab6612d85dea2.json  70b84e84e73a19db.json  7bbf5494adfa7a2a.json  82f25a460295741b.json  8bcd248ed727904a.json  9ca0d0509ab3fc2f.json  e8f78c493ccf115a.json  f1c0b9b088eaa86c.json
dipdiver/brain/m2/: __init__.py
dipdiver/brain/m2/lite/: __init__.py  executor.py  handler.py  loop.py  prompts.py  proposer.py  schema.py
dipdiver/brain/m5/: __init__.py  committee.py  personas.py  schema.py
dipdiver/brokers/: __init__.py
dipdiver/committee/: __init__.py
dipdiver/harness/: __init__.py  benchmark.py  picks.py  render.py  scoreboard.py  sessions.py  veto_regret.py
dipdiver/ui/: __init__.py  app.py  cli.py  db.py  env_loader.py  helpers.py  logging_setup.py  settings.py
dipdiver/ui/jobs/: __init__.py  alerts.py  m1_retrain.py  m2_lite.py  market_onboard.py  nightly.py  pnl_settle.py  registry.py  scheduler.py  scoreboard_render.py  signal_refresh.py  veto_backfill.py
dipdiver/ui/routes/: __init__.py  config_page.py  dashboard.py  decisions.py  health.py  logs.py  models_page.py  persona_accuracy.py  picks.py  positions.py  registry_api.py  runs.py  schedule_page.py  scoreboard_page.py  strategies.py  triggers.py
dipdiver/ui/templates/: base.html  config.html  dashboard.html  decision_detail.html  health.html  logs.html  models.html  persona_accuracy.html  picks.html  positions.html  run_detail.html  runs_list.html  schedule.html  scoreboard.html  strategies.html  strategies_compare.html  strategy_detail.html  triggers.html  watchlist.html
docs/: ARCHITECTURE.md  DISCLAIMER.md  IMPLEMENTATION_PLAN.md  ROADMAP.md  STACK_DECISIONS.md  VALIDATION.md
docs/milestones/: M10_model_lifecycle.md  M11_live_gate.md  M12_feedback.md  M13_multiuniverse.md  M14_polish.md  M1_qlib_baseline.md  M2_lite.md  M3_execution.md  M5_committee.md  M6_2_pnl_settle.md  M6_3_veto_regret.md  M6_forward_eval.md  M8_ops_ui.md  M9_picks.md
lean_projects/: lean.json
lean_projects/dipdiver_dow30_lightgbm/: config.json  main.py  signals.csv
llm_wiki/: INDEX.md  data_and_lean.md  m1_baselines.md  m2_lite.md  m3_execution.md  m5_committee.md  scaffold.md  tests.md  validation.md
scripts/: kill_switch.sh  m1_diagnose_nifty.py  m1_run.py  m1_setup.py  m1_verify.py  m2_lite_run.py  m2_lite_verify.py  m3_export_lean_data.py  m3_export_signals.py  m3_live_alpaca.py  m3_verify.py  m5_review_signals.py  m6_backfill.py  m6_nightly.py  m6_render_scoreboard.py
scripts/ops/: bootstrap_vm.sh
tests/: conftest.py  test_smoke.py
tests/adapters/: test_live_gate.py
tests/brain/: test_baselines.py  test_data.py  test_metrics_stats.py  test_qlib_reinit.py  test_roll_window.py  test_universes_sp500.py  test_walkforward_and_label.py
tests/harness/: conftest.py  test_benchmark.py  test_picks.py  test_picks_staleness.py  test_pnl_settle.py  test_render.py  test_scoreboard.py  test_sessions.py  test_veto_regret.py
tests/ui/: conftest.py  test_db_migration.py  test_env_loader.py  test_file_logging.py  test_jobs_repo_import.py  test_kill_switch_and_security.py  test_lock_gate.py  test_m1_retrain_calendar.py  test_market_onboard.py  test_models_lifecycle.py  test_nav_active.py  test_paths_settings_db.py  test_persona_accuracy.py  test_picks_route.py  test_picks_staleness_render.py  test_picks_timing.py  test_routes_mutate.py  test_routes_smoke.py  test_strategies_compare.py  test_triggers_concurrency.py
