[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dipdiver"
version = "0.0.0"
description = "Agentic AI trading stack — integration of RD-Agent, Qlib, Lean, TradingAgents topology, and live-trade-bench validation."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "DipDiver contributors" }]
keywords = ["trading", "quant", "agentic", "llm", "qlib", "lean", "rd-agent"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    # Brain / quant — pinned in milestone 1
    # "pyqlib",
    # Execution — pinned in milestone 3 (Lean python wrapper)
    # Committee — pinned in milestone 5
    # Kept empty during scaffolding to avoid stale pins.
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyyaml>=6",
    "types-PyYAML",
]
brain = [
    # pyqlib 0.9.7 ships wheels for Python 3.8-3.12 only. Use a 3.12 venv for brain work.
    "pyqlib>=0.9.7; python_version < '3.13'",
    "pyyaml>=6",
    "lightgbm>=4",
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "yfinance>=0.2.40",
]
# LightGBM-only brain — same as `brain` minus torch (and thus no LSTM). Use
# this for a much smaller Docker image (~hundreds of MB vs several GB once
# torch + CUDA wheels are pulled). LightGBM is the better-performing M1
# baseline anyway; LSTM configs onboarded against this extra fail cleanly with
# "brain dependencies missing: torch". Install the full `brain` extra to add LSTM.
brain-lite = [
    "pyqlib>=0.9.7; python_version < '3.13'",
    "pyyaml>=6",
    "lightgbm>=4",
    "numpy>=1.26",
    "pandas>=2.2",
    "yfinance>=0.2.40",
]
m2 = [
    # m2-lite: our LLM factor-proposer. OpenAI SDK works for DeepSeek too
    # via base_url override. Pydantic validates LLM output before it touches Qlib.
    "openai>=1.40",
    "pydantic>=2.5",
]
m3 = [
    # Lean execution chassis for backtesting. The CLI is host-side; the engine
    # runs in Docker. Docker Desktop must be installed separately.
    "lean>=1.0",
    # Live paper-trading via Alpaca, since Lean's live mode requires a paid
    # QuantConnect subscription. See docs/milestones/M3_lean.md step 6.
    "alpaca-py>=0.30",
]
ui = [
    # M8 operator console: FastAPI + Jinja + APScheduler + SQLAlchemy.
    # Tailwind/HTMX served via CDN — no Node toolchain. See docs/milestones/M8_ops_ui.md.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.4",
    "pyyaml>=6",
    "httpx>=0.27",
    "croniter>=2.0",
]

[project.scripts]
dipdiver-ui = "dipdiver.ui.cli:main"

[project.urls]
Repository = "https://github.com/thedumbstuff/DipDiver"
Documentation = "https://github.com/thedumbstuff/DipDiver/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["dipdiver*"]
exclude = ["tests*", "notebooks*"]

# Non-Python runtime data that MUST ship in the wheel. Without this a real
# `pip install` (e.g. the Docker image) omits the Jinja templates and the UI
# 500s with TemplateNotFound. Editable/dev installs read these from the source
# tree directly, so the gap only shows up in a built/installed package.
[tool.setuptools.package-data]
"dipdiver.ui" = ["templates/*.html", "static/**/*"]
"dipdiver.brain.baselines" = ["configs/*.yaml", "locked/*.json"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "C4",            # comprehensions
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["dipdiver"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires external services (broker, LLM, data)",
]

[tool.coverage.run]
branch = true
source = ["dipdiver"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
